refactor & clean code